Fixed buttons not showing in firefox

--- a/sass/nav.scss
+++ b/sass/nav.scss
@@ -117,7 +117,7 @@ body {
       top: 46%;
       right: 0;
       transform: translateY(-50%);
-      margin-right: 3%;
+      margin-right: 4%;
       color: $white;
     }
   }
@@ -129,6 +129,8 @@ body {
     width: 100%;
     max-width: 30vw;
     height: 100%;
+    background: transparent;
+
 
     .table {
       width: 100%;
@@ -140,15 +142,17 @@ body {
       left: 50%;
       transform: translate(-50%, -50%);
       text-align: center;
+      background: transparent;
 
       .navbar-right {
-        height: 100%;
+        height: 80px;
         width: 100%;
         list-style: none;
         padding: 0;
         margin: 0;
         overflow: hidden;
         top: 10%;
+        z-index: 5;
 
         li {
           display: inline-block;
@@ -165,7 +169,7 @@ body {
           top: 50%;
           left: 0%;
           transform: translateY(90%);
-          z-index: 5;
+          z-index: 500;
 
           a {
             width: 10%;
@@ -190,7 +194,7 @@ body {
         top: 50%;
         left: 0%;
         transform: translateY(90%);
-        z-index: 5;
+        z-index: 500;
 
         a {
           width: 10%;
